APPS-1502: fix glitching last card, last card not covered by the add page button, update after paste

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -314,6 +314,7 @@
 
 		.mowPageControlContentPanel {
 			width: 100%;
+			margin-bottom: 64px;
 		}
 	}
 	.mowPageControlPanel.animateIn {
